Fix broken styles in edit view

--- a/shuup/admin/static_src/base/scss/shuup/inner-nav.scss
+++ b/shuup/admin/static_src/base/scss/shuup/inner-nav.scss
@@ -4,34 +4,40 @@
     @include media-breakpoint-down(sm) {
         display: none;
     }
+}
 
-    .sidebar-list {
-        &-item {
-            border: solid $border-color;
-            border-width: 1px 0px;
-            display: block;
-            font-size: 1.4rem;
-            padding: 5px 0px;
-            margin-bottom: -1px;
-            color: $text-color;
-            position: relative;
-            &:hover, &:focus {
-                color: $primary;
-                text-decoration: none;
-                background: rgba(0,0,0,0.03);
-            }
-            &.active {
-                background: #fff;
-                color: $primary;
-                font-weight: normal;
-            }
-            &.errors {
-                padding-right: 35px;
-            }
-            i {
-                width: 30px;
-                text-align: center;
-            }
+.sidebar-list-item {
+    display: block;
+    padding: 12px 8px;
+    margin-bottom: 8px;
+    color: $text-color;
+    position: relative;
+    border-radius: 4px;
+
+    &:hover, &:focus {
+        color: $primary;
+        text-decoration: none;
+
+        i {
+            opacity: 0.8;
         }
+    }
+    &.active {
+        background: #fff;
+        color: $primary;
+        font-weight: normal;
+        box-shadow: $box-shadow-sm;
+
+        i {
+            opacity: 0.8;
+        }
+    }
+    &.errors {
+        padding-right: 35px;
+    }
+    i {
+        opacity: 0.7;
+        width: 30px;
+        text-align: center;
     }
 }
